# wacky

./: .gitignore  CMakeLists.txt  README.markdown  README.md  closest.py  correlate.py  count_final.sh  count_final_trans.sh  data_buffer.py  probs.py  read_final.py  restored.py  stats.py  tensorflow_final.sh  test_simple.py  ukwac.py  ukwac_tensorflow.xml  ukwac_word2vec.xml  verbs.py  verbs_binary.py  verbs_both.py  verbs_count.py  verbs_count2.py  verbs_read.py  visualize.py  wackyvec.def  wackyvec_cpu.def  word2vec_final_both.sh  word_vectors_to_numpy.py
include/: .string_utils.hpp.swp  .wacky_create.hpp.swp  .wacky_read.hpp.swp  .wacky_sbj_obj.hpp.swp  .wacky_verb.hpp.swp  cuda_math.hpp  cuda_verb.hpp  string_utils.hpp  wacky_create.hpp  wacky_math.hpp  wacky_misc.hpp  wacky_read.hpp  wacky_sbj_obj.hpp  wacky_sbj_obj_mkl.hpp  wacky_verb.hpp
python/: correlate.py  final_stats.py  graphs.py  probs.py  stats.py  verbs_binary.py  verbs_both.py  verbs_math.py
scripts/: count_final_both.sh  final_stats_tensorflow.sh  final_stats_word2vec.sh  tensorflow_final_both.txt  tensorflow_final_trans.txt  word2vec_final.sh  word2vec_final_trans.sh
src/: .cuda_math.cc.swp  .cuda_verb.cu.swp  .wacky.cc.swo  .wacky.cc.swp  .wacky_bench.cc.swp  .wacky_create.cc.swp  .wacky_math.cc.swo  .wacky_math.cc.swp  .wacky_read.cc.swp  .wacky_sbj_obj.cc.swo  .wacky_sbj_obj.cc.swp  .wacky_verb.cc.swo  .wacky_verb.cc.swp  cuda_math.cc  cuda_verb.cu  wacky.cc  wacky_bench.cc  wacky_breakup.cc  wacky_create.cc  wacky_math.cc  wacky_read.cc  wacky_sbj_obj.cc  wacky_sbj_obj_mkl.cc  wacky_verb.cc  word2vec.py
test/: basic.cc  math.cc  verb.cc
test/ukwac/: ukwac_00  ukwac_01  ukwac_02  ukwac_03  ukwac_04
